# SFML-sandbox

./: .gitignore  .gitmodules  AnimatedSprite.cpp  AnimatedSprite.h  Animation.cpp  Animation.h  Button.cpp  Button.h  CMakeLists.txt  Callbacks.cpp  Callbacks.h  Cell.cpp  Cell.h  Cell_object.cpp  Cell_object.h  Character.cpp  Character.h  Field.cpp  Field.h  Inventory.cpp  Inventory.h  InventoryDraw.cpp  InventoryDraw.h  Item.cpp  Item.h  Object.cpp  Object.h  Player.cpp  Player.h  README.md  ResourceLoader.cpp  ResourceLoader.h  SFML sandbox.cbp  SFML sandbox.cscope_file_list  SFML sandbox.depend  SFML sandbox.layout  Scene.cpp  Scene.h  SceneController.cpp  SceneController.h  (+19 more)
Images/: Unite_spritesheet.py
Locations/: loc_0 — копия.json  loc_0 — на всякий случай.json  loc_0.json  loc_1 — копия.json  loc_1.json  loc_2.json
SFML/: CMakeLists.txt
configs/: dynamic_UI.json  field_scene.json  field_scene.json.bak  main_menu.json  resources.json  scenes.json
configs/characters/: default_character.json  flametail.json
jsoncpp/: CMakeLists.txt
